fix sort buttons, add active link styles, change sort button location, fix spacing

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     margin: 0px;
     padding: none;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 header {
@@ -53,6 +54,15 @@ header {
     color: #ffffff;
     text-decoration: none;
     letter-spacing: 4px;
+    cursor: pointer;
+}
+
+.nav ul li p:hover {
+    color: #ffcb05;
+}
+
+#active {
+    color: #ffcb05;
 }
 
 .mainSection {
@@ -90,6 +100,10 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+}
+
+.card-content button {
+    font-size: 1em;
 }
 
 .card h2 {
@@ -130,4 +144,21 @@ header {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+}
+
+.sort-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.sort-button {
+    background-color: #ffcb05;
+    color: #373737;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.5em;
 }
